rename to verbose

--- a/src/daisyft/templates/daisyft.conf.py.jinja2
+++ b/src/daisyft/templates/daisyft.conf.py.jinja2
@@ -14,7 +14,7 @@ config = ProjectConfig(
     port={{ port }},
     live={{ live }},
     include_icons={{ include_icons }},
-    verbose_docs={{ verbose_docs }},
+    verbose={{ verbose }},
     paths={
         "components": Path("{{ paths.components }}"),
         "ui": Path("{{ paths.ui }}"),
