fixed variants marker

--- a/src/daisyft/templates/component.py.jinja2
+++ b/src/daisyft/templates/component.py.jinja2
@@ -1,4 +1,4 @@
-{%- if docs %}
+{%- if docs -%}
 """
 {{ docs }}
 """
@@ -17,6 +17,5 @@ class {{ class_name }}:
 # ============================================================================
 #  {{ class_name }} Variants
 # ============================================================================
-
 {{ variants_source }}
-{%- endif %} 
+{%- endif %}
