--- a/src/daisyft/templates/daisyft.conf.py.jinja2
+++ b/src/daisyft/templates/daisyft.conf.py.jinja2
@@ -26,14 +26,13 @@ config = ProjectConfig(
         "js": Path("{{ paths.js }}"),
         "icons": Path("{{ paths.icons }}"),
     },
-    binary_metadata=BinaryMetadata(
-        version={{ binary_metadata.version|tojson }},
-        path=Path({{ (Path(sys.prefix) / "bin" / ProjectConfig.get_tailwind_binary_name()).as_posix()|tojson }})
-    ) if binary_metadata else (
+    binary_metadata=(
         BinaryMetadata(
-            version="",
-            path=Path({{ (Path(sys.prefix) / "bin" / ProjectConfig.get_tailwind_binary_name()).as_posix()|tojson }})
-        ) if binary_metadata is None else None
+            version="{{ binary_metadata.version }}",
+            path=Path({{ binary_metadata.path.as_posix()|tojson }})
+        )
+        if binary_metadata and binary_metadata.path.exists()
+        else None
     ),
     components={
         {% for name, comp in components.items() %}
